exports[`DisplayTable should render with default title property (name) 1`] = `
<table
  className="table tc-list-display-table">
  <thead>
    <tr>
      <th>
        Id
      </th>
      <th>
        Name
      </th>
      <th>
        Author
      </th>
      <th>
        Created
      </th>
      <th>
        Modified
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        1
      </td>
      <td>
        <div
          style={
            Object {
              "display": "inline",
            }
          }>
          <span
            className={undefined}>
            Hello world
          </span>
        </div>
        <div
          className="tc-actions btn-group">
          <button
            aria-describedby={42}
            className="btn btn-link"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            role="link"
            type="button">
            <i
              aria-hidden="true"
              className="fa fa-edit"
              title={null} />
          </button>
          <button
            aria-describedby={42}
            className="btn btn-link"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            role="link"
            type="button">
            <i
              aria-hidden="true"
              className="fa fa-trash-o"
              title={null} />
          </button>
        </div>
      </td>
      <td>
        Jean-Pierre DUPONT
      </td>
      <td>
        2016-09-22
      </td>
      <td>
        2016-09-22
      </td>
    </tr>
    <tr>
      <td>
        2
      </td>
      <td>
        <div
          style={
            Object {
              "display": "inline",
            }
          }>
          <span
            className={undefined}>
            Foo
          </span>
        </div>
        <div
          className="tc-actions btn-group" />
      </td>
      <td>
        Jean-Pierre DUPONT
      </td>
      <td>
        2016-09-22
      </td>
      <td>
        2016-09-22
      </td>
    </tr>
    <tr>
      <td>
        2
      </td>
      <td>
        <div
          style={
            Object {
              "display": "inline",
            }
          }>
          <span
            className={undefined}>
            Bar
          </span>
        </div>
        <div
          className="tc-actions btn-group" />
      </td>
      <td>
        Jean-Pierre DUPONT
      </td>
      <td>
        2016-09-22
      </td>
      <td>
        2016-09-22
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`DisplayTable should render with defined title property 1`] = `
<table
  className="table tc-list-display-table">
  <thead>
    <tr>
      <th>
        Id
      </th>
      <th>
        Name
      </th>
      <th>
        Author
      </th>
      <th>
        Created
      </th>
      <th>
        Modified
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        <div
          style={
            Object {
              "display": "inline",
            }
          }>
          <i
            aria-hidden="true"
            className="fa fa-file-excel-o"
            title={null} />
          <button
            className="btn btn-link"
            disabled={false}
            onClick={[Function]}
            role="link"
            type="button">
            1
          </button>
        </div>
        <div
          className="tc-actions btn-group">
          <button
            aria-describedby={42}
            className="btn btn-link"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            role="link"
            type="button">
            <i
              aria-hidden="true"
              className="fa fa-edit"
              title={null} />
          </button>
          <button
            aria-describedby={42}
            className="btn btn-link"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            role="link"
            type="button">
            <i
              aria-hidden="true"
              className="fa fa-trash-o"
              title={null} />
          </button>
        </div>
      </td>
      <td>
        Hello world
      </td>
      <td>
        Jean-Pierre DUPONT
      </td>
      <td>
        2016-09-22
      </td>
      <td>
        2016-09-22
      </td>
    </tr>
    <tr>
      <td>
        <div
          style={
            Object {
              "display": "inline",
            }
          }>
          <i
            aria-hidden="true"
            className="fa fa-file-pdf-o"
            title={null} />
          <button
            className="btn btn-link"
            disabled={false}
            onClick={[Function]}
            role="link"
            type="button">
            2
          </button>
        </div>
        <div
          className="tc-actions btn-group" />
      </td>
      <td>
        Foo
      </td>
      <td>
        Jean-Pierre DUPONT
      </td>
      <td>
        2016-09-22
      </td>
      <td>
        2016-09-22
      </td>
    </tr>
    <tr>
      <td>
        <div
          style={
            Object {
              "display": "inline",
            }
          }>
          <button
            className="btn btn-link"
            disabled={false}
            onClick={[Function]}
            role="link"
            type="button">
            2
          </button>
        </div>
        <div
          className="tc-actions btn-group" />
      </td>
      <td>
        Bar
      </td>
      <td>
        Jean-Pierre DUPONT
      </td>
      <td>
        2016-09-22
      </td>
      <td>
        2016-09-22
      </td>
    </tr>
  </tbody>
</table>
`;
